--- a/static/index.html
+++ b/static/index.html
@@ -54,7 +54,7 @@ img.emoji {
 <div id="Grid-Content" class="wp-block-group all-grid-pc-5 all-box-pz-15 xs-box-pz-5 all-grid-gz-6 xs-grid-gz-3 all-box-order-0 xs-box-order-1 has-background" style="background-color:white"><div class="wp-block-group__inner-container">
 <div id="Grid-Title" class="wp-block-group all-txt-fs-10 all-txt-lh-1 all-txt-fw-1 xs-txt-fs-8 xs-txt-lh-8"><div class="wp-block-group__inner-container">
 <h1 class="has-text-color" style="color:black">
-<meta charset="utf-8">Version 1.O</h1>
+<meta charset="utf-8">Version 2.0</h1>
 </div></div>
 
 
